	- Signal tests skipped under Win32
	- Better testing

0.03  Tue Jul 25 12:07:09 AUSEST 2006
	- Documentation improvements

0.04  Mon Oct 30 15:14:53 AUSEST 2006
	- Fixed path issue with tests that would cause them
	  to fail on some systems where "." was not in the
	  $ENV{PATH}

	- Tests now always use the system-configured perl for
	  invoking commands.

0.05  Mon Apr  9 16:22:22 AUSEST 2007
	- Removed spurious double-quotes in error messages reporting
	  unexpected exit values and an internal error message.  Thanks
	  to Jon Swartz for spotting these.

0.06  Thu Sep  6 18:09:50 AUSEST 2007
	- Warnings are no longer emitted on failed calls to system().
	- Multiple argument run() no longer uses the shell under Win32.
	- 16-bit native exit values are now returned on Win32 systems.
	- WIF* POSIX commands that are not defined are more correctly
	  handled, particularly under Perl 5.6.  Thanks to Laurent
	  Laporte for the bug report (RT #29080).
	- README and POD improved.

0.07  Sat Apr 12 11:57:28 AUSEST 2008
	- Changed tests to use SIGKILL rather than SIGINT to avoid
	  complications on systems where SIGINT is masked.
	- All dependencies now explicitly stated in Makefile.PL.
	- run() now explicitly checked for tainted arguments and
	  environment, and provides helpful diagnostics if found.
	- Removed mention of unimplemented capture() command in
	  documentation.

0.08  Sun Apr 13 13:38:49 AUSEST 2008
	- Numerous documentation fixes thanks to Matt Kraai
	  (RT #34896)
	- Updated t/07_taint.t to not fail on systems that have
	  zero-length environment strings.
	- Updated taint checks to always run on 5.6.x, under
	  0.07 they would never run on older perls.

0.09
	- Test suite now provides better diagnostics if taint
	  tests fail unexpectedly early.
	- Multi-argument run() will now search $ENV{PATH}
	  under Win32.
	- Documented $ENV{PATH} foibles on Win32 systems under
	  the Windows-specific notes section of the documentation.
