@@ -4,4 +4,4 @@ use strict;
 use Test::More;
 eval "use Test::Pod::Coverage 1.00";
 plan skip_all => "Test::Pod::Coverage 1.00 required for testing POD" if $@;
-all_pod_coverage_ok( { trustme => ['run'] } );
+all_pod_coverage_ok();
